Solved the slight CSS mistake that made the timer not aligned with the rest of the design.

--- a/myStyle.css
+++ b/myStyle.css
@@ -68,7 +68,7 @@ button.half {
 	float: left;
 }
 
-#chrono {
+#timer {
 	float: right;
 }
 
